todolist/src/main/jkube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    jkube.io/scm-url: https://https://github.com/ThejaChowdary04/ToDolist.git/TodoList/todolist
    jkube.io/issue-system: Redmine
    jkube.io/issue-tracker-url: https://redmine.fic.udc.es/project/todolist/issues
    jkube.io/scm-tag: head
  labels:
    app: todolist
    provider: jkube
    version: 1.0
    group: com.example
  name: todolist
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: todolist
      provider: jkube
      group: com.example
  template:
    metadata:
      annotations:
        jkube.io/scm-url: https://https://github.com/ThejaChowdary04/ToDolist.git/TodoList/todolist
        jkube.io/issue-system: Redmine
        jkube.io/issue-tracker-url: https://redmine.fic.udc.es/project/todolist/issues
        jkube.io/scm-tag: head
      labels:
        app: todolist
        provider: jkube
        version: 1.0
        group: com.example
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: HOSTNAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: https://github.com/ThejaChowdary04/ToDolist.git:5050/TodoList/todolist:latest
        imagePullPolicy: Always
        name: deploy-todolist
        securityContext:
          privileged: false
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: To Do
