todolist/src/main/jkube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todolist-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /todolist
spec:
  rules:
    - http:
        paths:
          - path: /todolist
            pathType: Prefix
            backend:
              service:
                name: todolist
                port:
                  number: 8080
